--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -2,5 +2,9 @@
 @import "container";
 @import "header";
 @import "hero";
+@import "our-collaction";
+@import "prepare";
+@import "work";
+
 
 @import "footer";
